Created attachment 181135 [details] Crash dump interpreted output r315333 seems to have introduced a trap 12 panic on boot on the following hardware: ix0@pci0:6:0:0: class=0x020000 card=0x00068086 chip=0x10fb8086 rev=0x01 hdr=0x00 vendor = 'Intel Corporation' device = '82599ES 10-Gigabit SFI/SFP+ Network Connection' class = network subclass = ethernet System is 10.3-STABLE amd65 r315899. I am attaching core.txt.0 from the panic. Note that this does not happen on the Intel X540-T1 card which is also an ix0 device.
A commit references this bug: Author: erj Date: Fri Mar 24 18:28:48 UTC 2017 New revision: 315916 URL: https://svnweb.freebsd.org/changeset/base/315916 Log: ixgbe(4): Re-add mutex lock call that was dropped in a previous commit. PR: 218062 Reported by: Terry Kennedy <terry-freebsd@glaver.org> Sponsored by: Intel Corporation Changes: stable/10/sys/dev/ixgbe/if_ix.c
(In reply to commit-hook from comment #1) I rebuilt the kernel (r315918) and the problem seems fixed. Thanks for the quick response!