ixgbe(4): Re-add mutex lock call that was dropped in a previous commit.

PR:		218062
Reported by:	Terry Kennedy <terry-freebsd@glaver.org>
Sponsored by:	Intel Corporation

Former-commit-id: 35c5e3cb2dac0e56e7956fec1e7e1442997465f5